WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65476
Web Inspector: [Extensions API] webInspector.inspectedPage.reload() is broken
https://bugs.webkit.org/show_bug.cgi?id=65476
Summary
Web Inspector: [Extensions API] webInspector.inspectedPage.reload() is broken
Andrey Kosyakov
Reported
2011-08-01 10:09:04 PDT
Somehow, the test for webInspector.inspectedPage.reload() added in
Bug 51485
wasn't landed. This lead to webInspector.inspectedPage.reload() being eventaully broken by a change in inspector backend interface (PageAgent.setUserAgentOverride() -> NetworkAgent.setUserAgentOverride()).
Attachments
patch
(5.96 KB, patch)
2011-08-01 10:28 PDT
,
Andrey Kosyakov
yurys
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2011-08-01 10:28:10 PDT
Created
attachment 102533
[details]
patch - Fixed webInspector.inspectedPage.reload() - Broguht back tests for the above - Removed redundant user-agent override from FrameLoader::loadResourceSynchronously(), this should happen indirectly via a call to addExtraFieldsToSubresourceRequest()
WebKit Review Bot
Comment 2
2011-08-01 11:12:31 PDT
Comment on
attachment 102533
[details]
patch
Attachment 102533
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9290455
New failing tests: http/tests/inspector/extensions-useragent.html
Andrey Kosyakov
Comment 3
2011-11-30 09:37:04 PST
Manually committed
r92187
:
http://trac.webkit.org/changeset/92187
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug