2011-08-01  Andrey Kosyakov  <caseq@chromium.org>

Web Inspector: [Extensions API] webInspector.inspectedPage.reload() is broken
        https://bugs.webkit.org/show_bug.cgi?id=65476

        - fixed webInspector.inspectedWindow.reload(), brought tests back.
        - removed redundant setting of user agent in FrameLoader::loadResourceSynchronously()

        Reviewed by Yury Semikhatsky.

        Test: http/tests/inspector/extensions-useragent.html

        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer.prototype._onReload):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadResourceSynchronously):

2011-08-01  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: [Extensions API] webInspector.inspectedPage.reload() is broken
        https://bugs.webkit.org/show_bug.cgi?id=65476

        Reviewed by Yury Semikhatsky.

        * http/tests/inspector/extensions-useragent-expected.txt: Added.
        * http/tests/inspector/extensions-useragent.html: Added.


Canonical link: https://commits.webkit.org/81330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92187 268f45cc-cd09-0410-ab3c-d52691b4dbfc