Source/WebCore/inspector/front-end/ExtensionServer.js
@@ -273,7 +273,7 @@ WebInspector.ExtensionServer.prototype = {
     _onReload: function(message)
     {
         if (typeof message.userAgent === "string")
-            PageAgent.setUserAgentOverride(message.userAgent);
+            NetworkAgent.setUserAgentOverride(message.userAgent);
 
         PageAgent.reload(false);
         return this._status.OK();
